--- a/STM32/sensor_network.ioc
+++ b/STM32/sensor_network.ioc
@@ -12,23 +12,31 @@ Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA14
-Mcu.Pin11=PA15
-Mcu.Pin12=PD7
-Mcu.Pin13=PB3
-Mcu.Pin14=PB4
-Mcu.Pin15=PB5
-Mcu.Pin16=PB8
-Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin10=PA3
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PA15
 Mcu.Pin2=PE4
+Mcu.Pin20=PD7
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB5
+Mcu.Pin24=PB8
+Mcu.Pin25=VP_SYS_VS_Systick
 Mcu.Pin3=PE5
-Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=18
+Mcu.Pin4=PC0
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA0-WKUP
+Mcu.Pin9=PA2
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
@@ -72,6 +80,22 @@ PB5.Locked=true
 PB5.Signal=GPIO_Output
 PB8.Locked=true
 PB8.Signal=GPIO_Output
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.Locked=true
+PC1.Signal=GPIO_Output
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC3.Locked=true
+PC3.Signal=GPIO_Output
+PC4.Locked=true
+PC4.Signal=GPIO_Output
+PC5.Locked=true
+PC5.Signal=GPIO_Output
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.Locked=true
+PC7.Signal=GPIO_Output
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103Z(C-D-E)Tx
@@ -106,13 +130,13 @@ ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
-ProjectManager.DeletePrevious=true
+ProjectManager.DeletePrevious=false
 ProjectManager.DeviceId=STM32F103ZETx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.7.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
-ProjectManager.KeepUserCode=false
+ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=0
 ProjectManager.MainLocation=Src
@@ -133,9 +157,11 @@ RCC.IPParameters=APB1Freq_Value,APB2Freq_Value,FamilyName,PLLCLKFreq_Value,PLLMC
 RCC.PLLCLKFreq_Value=8000000
 RCC.PLLMCOFreq_Value=4000000
 RCC.TimSysFreq_Value=8000000
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=9600
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=9600
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
